--- a/TreeDataStructureProject/src/hedspi/group28/view/AboutAndSelectView.fxml
+++ b/TreeDataStructureProject/src/hedspi/group28/view/AboutAndSelectView.fxml
@@ -5,11 +5,9 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1"
- fx:controller="hedspi.group28.controller.AboutAndSelectController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="hedspi.group28.controller.AboutAndSelectController">
    <children>
-      <ComboBox fx:id="Select" layoutX="24.0" layoutY="17.0" prefHeight="31.0" prefWidth="256.0" promptText="Select a type of data structure"/>
-      <Button fx:id="About" layoutX="878.0" layoutY="618.0" mnemonicParsing="false" text="About" onAction="#handleAbout"/>
+      <ComboBox fx:id="Select" layoutX="24.0" layoutY="17.0" prefHeight="31.0" prefWidth="256.0" promptText="Select a type of data structure" />
+      <Button fx:id="About" layoutX="878.0" layoutY="618.0" mnemonicParsing="false" onAction="#handleAbout" text="About" />
    </children>
 </AnchorPane>
