--- a/TreeDataStructureProject/src/hedspi/group28/test/ProgressBar.fxml
+++ b/TreeDataStructureProject/src/hedspi/group28/test/ProgressBar.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="657.0" prefWidth="941.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane prefHeight="657.0" prefWidth="941.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="hedspi.group28.controller.StartSceneController">
    <children>
       <HBox layoutX="416.0" layoutY="588.0" prefHeight="11.0" prefWidth="129.0">
          <children>
