--- a/TreeDataStructureProject/src/hedspi/group28/view/MainScene.fxml
+++ b/TreeDataStructureProject/src/hedspi/group28/view/MainScene.fxml
@@ -18,15 +18,14 @@
             <Image url="@../resources/background.jpg" />
          </image>
       </ImageView>
-   <fx:include source="ProgressBar.fxml" />
+      <Pane fx:id="TreeView" layoutX="259.0" layoutY="42.0" prefHeight="488.0" prefWidth="658.0" />
    <fx:include source="AboutAndSelectView.fxml" />
-      <Pane fx:id="TreeView" layoutX="239.0" layoutY="22.0" prefHeight="488.0" prefWidth="679.0" />
-      <GridPane layoutX="25.0" layoutY="479.0">
+      <GridPane layoutX="25.0" layoutY="479.0" prefHeight="150.0" prefWidth="317.0">
         <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" maxWidth="95.0" minWidth="10.0" prefWidth="86.0" />
-          <ColumnConstraints hgrow="SOMETIMES" maxWidth="114.0" minWidth="10.0" prefWidth="114.0" />
-            <ColumnConstraints hgrow="SOMETIMES" maxWidth="114.0" minWidth="10.0" prefWidth="114.0" />
-            <ColumnConstraints hgrow="SOMETIMES" maxWidth="114.0" minWidth="10.0" prefWidth="114.0" />
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="104.0" minWidth="10.0" prefWidth="84.0" />
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="114.0" minWidth="10.0" prefWidth="88.0" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="154.0" minWidth="10.0" prefWidth="93.0" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="134.0" minWidth="10.0" prefWidth="58.0" />
         </columnConstraints>
         <rowConstraints>
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
@@ -51,9 +50,28 @@
             <TextField fx:id="t10" visible="false" GridPane.columnIndex="1" />
             <TextField fx:id="t20" visible="false" GridPane.columnIndex="2" />
             <TextField fx:id="t22" visible="false" GridPane.columnIndex="2" GridPane.rowIndex="2" />
-            <Button fx:id="b30" mnemonicParsing="false" text="Button" visible="false" GridPane.columnIndex="3" />
+            <Button fx:id="b30" mnemonicParsing="false" text="Go" visible="false" GridPane.columnIndex="3" />
          </children>
       </GridPane>
       <ComboBox fx:id="Algorithms" layoutX="131.0" layoutY="448.0" prefHeight="31.0" prefWidth="127.0" promptText="Algorithms" visible="false" />
+      <HBox layoutX="414.0" layoutY="595.0" prefHeight="11.0" prefWidth="129.0">
+         <children>
+            <ImageView fx:id="PrevButton" blendMode="EXCLUSION" fitHeight="51.0" fitWidth="177.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../resources/next-prev.jpg" />
+               </image>
+            </ImageView>
+            <ImageView fx:id="PauseButton" blendMode="EXCLUSION" fitHeight="51.0" fitWidth="56.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../resources/play.png" />
+               </image>
+            </ImageView>
+            <ImageView fx:id="NextButton" blendMode="EXCLUSION" fitHeight="51.0" fitWidth="51.0" pickOnBounds="true" preserveRatio="true" rotate="180.0">
+               <image>
+                  <Image url="@../resources/next-prev.jpg" />
+               </image>
+            </ImageView>
+         </children>
+      </HBox>
    </children>
 </AnchorPane>
