--- a/TreeDataStructureProject/src/hedspi/group28/view/MainScene.fxml
+++ b/TreeDataStructureProject/src/hedspi/group28/view/MainScene.fxml
@@ -54,21 +54,31 @@
          </children>
       </GridPane>
       <ComboBox fx:id="Algorithms" layoutX="131.0" layoutY="448.0" prefHeight="31.0" prefWidth="127.0" promptText="Algorithms" visible="false" />
-      <HBox layoutX="414.0" layoutY="595.0" prefHeight="11.0" prefWidth="129.0">
+      <HBox layoutX="411.0" layoutY="592.0" prefHeight="51.0" prefWidth="218.0">
          <children>
+            <ImageView fx:id="resetButton" blendMode="EXCLUSION" fitHeight="51.0" fitWidth="86.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../resources/skip-reset.png" />
+               </image>
+            </ImageView>
             <ImageView fx:id="PrevButton" blendMode="EXCLUSION" fitHeight="51.0" fitWidth="177.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../resources/next-prev.jpg" />
                </image>
             </ImageView>
-            <ImageView fx:id="PauseButton" blendMode="EXCLUSION" fitHeight="51.0" fitWidth="56.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fx:id="PauseButton" blendMode="EXCLUSION" fitHeight="51.0" fitWidth="67.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../resources/play.png" />
                </image>
             </ImageView>
-            <ImageView fx:id="NextButton" blendMode="EXCLUSION" fitHeight="51.0" fitWidth="51.0" pickOnBounds="true" preserveRatio="true" rotate="180.0">
+            <ImageView fx:id="NextButton" blendMode="EXCLUSION" fitHeight="51.0" fitWidth="63.0" pickOnBounds="true" preserveRatio="true" rotate="180.0">
                <image>
                   <Image url="@../resources/next-prev.jpg" />
+               </image>
+            </ImageView>
+            <ImageView fx:id="skipButton" blendMode="EXCLUSION" fitHeight="51.0" fitWidth="56.0" pickOnBounds="true" preserveRatio="true" rotate="180.0">
+               <image>
+                  <Image url="@../resources/skip-reset.png" />
                </image>
             </ImageView>
          </children>
